Fixed overlap bug

--- a/style.css
+++ b/style.css
@@ -152,6 +152,6 @@ span {
   padding-top: 20px;
 }
 
-.hidden {
+/* .hidden {
   background-color: dodgerblue;
 }
